version/0.14/_sources/api/solver/_autosummary/settings/liquidus_slope.rst.txt
:orphan:

.. _liquidus_slope:

liquidus_slope
==============

.. autoclass:: ansys.fluent.core.solver.settings_231.liquidus_slope.liquidus_slope

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

