version/0.23/_sources/api/solver/_autosummary/settings/liquidus_slope.rst.txt
:orphan:

.. _liquidus_slope:

liquidus_slope
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.liquidus_slope.liquidus_slope
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

